--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ html {
   align-items: center;
   padding: 10rem 0;
   border-radius: 0 3rem 3rem 0;
-  transition: left 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+ 
   opacity: 0;
 }
 .signup-form h1 {
@@ -166,8 +166,23 @@ input {
     font-size: 30%;
   }
 }
-@media only screen and (max-width: 440px) {
+@media only screen and (max-width: 430px) {
   html {
-    font-size: 30%;
+    font-size: 25%;
+  }
+  .orange-bg button {
+    font-size: 2rem;
+  }
+  .signup-form button {
+    font-size: 2rem;
+  }
+}
+@media only screen and (max-width: 375px) {
+  html {
+    font-size: 20%;
+  }
+
+  input::placeholder {
+    font-size: 2rem;
   }
 }
